AAKTXZ2023/QCDNUM/qcdnum-18-00-00/.nfs807c304e01cf581c00002fe8
conftest.c:2:8: error: expected '=', ',', ';', 'asm' or '__attribute__' before string constant
 ERSION "18-00-00"
        ^
